Agregue las imagenes, y las distintas clases para cada boton asi sea mas vistoso, debo corregir unos margenes y algunos tamaños de fotos ya que las recorte a ojo

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,29 @@
-/*# sourceMappingURL=styles.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  height: 100vh;
+}
+
+img {
+  width: 18rem;
+  overflow: hidden;
+}
+
+.btn-image {
+  border: none;
+}
+
+.btn-image:hover {
+  transform: scale(1.1);
+  transition: 0.6s;
+  z-index: 1;
+  border: none;
+}
+
+.btn-image:active, .btn-image:focus, .btn-image:visited {
+  border: none;
+}/*# sourceMappingURL=styles.css.map */
