--- a/css/styles.css
+++ b/css/styles.css
@@ -29,10 +29,45 @@ img {
 }
 
 .btn-element {
-  border: none;
   filter: grayscale(100%);
 }
 
-.btn-element:active, .btn-image:focus, .btn-image:visited {
-  border: none;
+.link-fuego {
+  color: black;
+  text-decoration: none;
+}
+
+.link-fuego:visited, .link-fuego:active, .link-fuego:hover {
+  color: red;
+  text-decoration: none;
+}
+
+.link-tierra {
+  color: black;
+  text-decoration: none;
+}
+
+.link-tierra:visited, .link-tierra:active, .link-tierra:hover {
+  color: brown;
+  text-decoration: none;
+}
+
+.link-aire {
+  color: black;
+  text-decoration: none;
+}
+
+.link-aire:visited, .link-aire:active, .link-aire:hover {
+  color: green;
+  text-decoration: none;
+}
+
+.link-agua {
+  color: black;
+  text-decoration: none;
+}
+
+.link-agua:visited, .link-agua:active, .link-agua:hover {
+  color: blue;
+  text-decoration: none;
 }/*# sourceMappingURL=styles.css.map */
