--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ img {
   border: none;
 }
 
+.navbar-toggler:focus {
+  box-shadow: none;
+}
+
 .btn-image:hover {
   transform: scale(1.1);
   transition: 0.6s;
