--- a/css/styles.scss
+++ b/css/styles.scss
@@ -15,13 +15,10 @@ img{
 .btn-image{
     border: none
 }
-// .btn-canvas{
-//     border: none;
-// }
-// .btn-canvas:active, .btn-canvas:focus, .btn-canvas:visited{
-//     border: none;
-// }
 
+.navbar-toggler:focus{
+    box-shadow: none
+}
 
 .btn-image:hover{
     -webkit-transform:scale(1.2);transform:scale(1.1);
